--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@graphql-tools/graphql-file-loader": "7.5.14",
     "@graphql-tools/load": "7.8.9",
     "@graphql-tools/schema": "9.0.13",
+    "typecheck": "tsc"
+  },
+  "dependencies": {
     "@next-auth/prisma-adapter": "1.0.5",
     "@next/font": "14.0.1",
     "@prisma/client": "4.9.0",
@@ -58,6 +61,10 @@
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-simple-import-sort": "8.0.0",
     "jsdom": "21.0.0",
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "autoprefixer": "10.4.13",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-simple-import-sort": "8.0.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.21",
     "prettier": "2.8.3",
