--- a/package.json
+++ b/package.json
@@ -6,18 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "run-p -l -c --aggregate-output lint:*",
+    "lint:eslint": "next lint",
+    "lint:prettier": "prettier --check .",
+    "format": "run-s format:prettier format:eslint",
+    "format:eslint": "yarn lint:eslint --fix",
+    "format:prettier": "yarn lint:prettier --write",
+    "typecheck": "tsc"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "1.0.5",
     "@next/font": "14.0.1",
+    "@prisma/client": "4.9.0",
     "@types/node": "20.8.10",
     "@types/react": "18.2.34",
     "@types/react-dom": "18.2.14",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
     "next": "14.0.1",
+    "next-auth": "4.18.8",
+    "nodemailer": "6.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "autoprefixer": "10.4.13",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-simple-import-sort": "8.0.0",
+    "npm-run-all": "4.1.5",
+    "postcss": "8.4.21",
+    "prettier": "2.8.3",
+    "prisma": "4.9.0",
+    "tailwindcss": "3.2.4"
   }
 }
