--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ EMAIL_SERVER=smtp://user:password@localhost:1025
 EMAIL_FROM=noreply@example.com
 NEXTAUTH_SECRET=RG2yCPFSm8P99OPrFAe8cNEJV5IHgXYWjQ16evy12Cg=
 NEXTAUTH_URL=http://localhost:3000
+NEXT_PUBLIC_GRAPHQL_ENDPOINT=http://localhost:3000/api/graphql
