--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "3.7.4",
     "@graphql-tools/graphql-file-loader": "7.5.14",
     "@graphql-tools/load": "7.8.9",
     "@graphql-tools/schema": "9.0.13",
@@ -42,6 +43,8 @@
     "@graphql-codegen/cli": "2.16.4",
     "@graphql-codegen/schema-ast": "2.6.1",
     "@graphql-codegen/typescript": "2.8.7",
+    "@graphql-codegen/typescript-operations": "2.5.12",
+    "@graphql-codegen/typescript-react-apollo": "3.3.7",
     "@graphql-codegen/typescript-resolvers": "2.7.12",
     "@types/micro-cors": "0.1.2",
     "@typescript-eslint/eslint-plugin": "5.48.1",
