--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@
 DATABASE_URL="postgresql://user:password@localhost:5432/nextjs-prisma-graphql-codegen-sample?schema=public"
 EMAIL_SERVER=smtp://user:password@localhost:1025
 EMAIL_FROM=noreply@example.com
+# EMAIL_SERVER=smtp://10b57e7f2089530c7d46fa1ba501e6f7:02e211da057930ab7316e4dc3b5a6266@in-v3.mailjet.com:587
+# EMAIL_FROM=nabesuke5098@gmail.com
 NEXTAUTH_SECRET=RG2yCPFSm8P99OPrFAe8cNEJV5IHgXYWjQ16evy12Cg=
-NEXTAUTH_URL=http://localhost:3000
-NEXT_PUBLIC_GRAPHQL_ENDPOINT=http://localhost:3000/api/graphql
+# NEXTAUTH_URL=http://localhost:3000
+# NEXT_PUBLIC_GRAPHQL_ENDPOINT=http://localhost:3000/api/graphql
