--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: '.node-version'
-          # cache: 'yarn'
+          cache: 'yarn'
       - run: yarn install
       - run: yarn lint
   typecheck:
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: '.node-version'
-          # cache: 'yarn'
+          cache: 'yarn'
       - run: yarn install
       - run: yarn typecheck
   test:
@@ -34,6 +34,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: '.node-version'
-          # cache: 'yarn'
+          cache: 'yarn'
       - run: yarn install
       - run: yarn test
