--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
     "@types/micro-cors": "0.1.2",
+    "@types/nodemailer": "^6.4.13",
     "@typescript-eslint/eslint-plugin": "5.48.1",
     "@vitejs/plugin-react": "3.0.1",
     "autoprefixer": "10.4.13",
